# ti-cmake-build-sys

./: CMakeLists.txt  README.md  build.sh  setup.sh
c7x_build/: CMakeLists.txt
cmake/: build_flags.cmake  c6x.cmake  c7x.cmake  common.cmake  linux-core.cmake  linux.cmake  r5f.cmake  soc-c6x.cmake  soc-c7x.cmake  soc-r5.cmake  tool_paths.cmake
include/: add.h
linux/: CMakeLists.txt
src/: add.c
test/: main.c
